增加可选性配置

--- a/set.ini
+++ b/set.ini
@@ -1,9 +1,16 @@
 [mysql]
-Localhost =
-Port =
-User =
-Pass =
-Database =
+Localhost = 127.0.0.1
+Port = 3306
+User = root
+Pass = root
+Database = tp
+
+[control]
+; 是否开启定时任务 1 否 2 是
+IsTask = 2
+; 定时任务时间
+TaskTime = 30/9/*/*/*
+
 
 [file]
 ; 是否图片本地化 1 否 2是
